--- a/leaderboard-frontend/src/components/LeaderBoard.css
+++ b/leaderboard-frontend/src/components/LeaderBoard.css
@@ -1,75 +1,109 @@
+/* 
+    The entire leaderBoard page is devided into 3 sections
+
+    THIS SECTION CONTAINS ONLY THE LEADERBOARD'S CSS
+
+    top-row:
+        contains 3 section:
+            Cohort
+            ActivityFeed
+            How many ppl got hired
+            Every time you read "top" you know that you are in this section, and the classnames are speaking for themselves
+    mid-row:
+        contains 2 section:
+            Weekly-LeaderBoard
+            Overall-LeaderBoard
+
+            !!! IMPORTANT !!! Both weekly and overall leaderboard have mid-weekly__ name since both looks the same!
+
+            Every time you read "mid" in a classname you know that you are in this section
+    bottom-row:
+        contains 2 section:
+            Github leader
+            Huntr Leader
+
+            "bottom" stands for this section
+
+*/
+
+
 .main-wrapper {
     height: 100%;
+    border: 3px solid black;
+    margin: .2rem;
 }
-.top-row {
-    height: 20%;
-}
+
+
+
+
 .mid-row {
+    display: flex;
+    justify-content: space-around;
     height: 50%;
-}
-.bottom-row {
-    height: 30%;
-    margin-bottom: 15px;
+    padding: 5px;
 }
 
-.top-row {
-    display: flex;
-    justify-content: space around;
+.mid-top-title {
+    margin-right: 15px;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
 }
 
-.top-cohort {
-    font-family: monospace;
-    font-size: 2rem;
-    display: flex;
-    width: 15%;
-    justify-content: center;
-    align-items: center;
-}
 
-.top-activityFeed {
-    display: block;
-    align-items: flex-start;
-    justify-content: left;
-    border: 3px solid black;
-    width: 70%;
-    margin: 0.8%;
-    padding-left: 15px;
-}
-.top-activityFeed h5 {
-    width: 85px;
-    height: 20px;
-    display: flex;
-    margin-top: -8px;
-    margin-left: 8px;
-    background: #f2f1f2;
-    margin-bottom: 0px;
-    padding-bottom: 0px;
-
-}
-
-.top-activityFeed p {
-    margin: 0;
-    border: 0;
-    padding: 0;
-
-}
-
-.top-hired {
-    display: flex;
-    border: 3px solid black;
-    align-items: center;
-    justify-content: center;
-    width: 15%;
-    font-size: 3rem;
-    margin: 0.8%;
-    margin-top: 0.6%;
-}
-
-.mid-row {
+.mid-weekly__wrapper {
     display: flex;
     justify-content: space-between;
+    flex-direction: column;
+    width: 100%;
+    height: 87%;
 }
 
+
+.mid-list {
+    border-bottom: 1px solid lightgray;
+    border-right: 2px solid lightgray;
+}
+
+.mid-title-name{
+    margin-right: 4px;
+}
+.mid-title {
+    display: flex;
+    width: 100%;
+    height: 8%;
+    align-self: flex-start;
+    padding-left: 0px;
+    
+}
+
+.mid-weekly__name {
+ 
+    width: 100%;
+    display: flex;
+    justify-content: column;  
+    flex-wrap: wrap;
+}
+.mid-weekly__rest {
+
+    width: 18.33%;
+    align-items: center;
+    padding-left: .2rem;
+}
+.mid-overall__name {
+    width: 45%;
+    display: flex;
+    flex-wrap: wrap;
+}
+.mid-overall__rest {
+    width: 18.33%;
+    align-items: center;
+}
+.mid-weekly h5 {
+    margin-top: -10px;
+    background-color: #f2f1f2;
+    margin-left: 8px;
+    margin-bottom: 0px;
+}
 .mid-weekly {
     display: flex;
     justify-content: flex-start;
@@ -81,65 +115,12 @@
     margin-right: 0.2%;
 }
 
-
-.mid-top-title {
-    margin-right: 15px;
-}
-.mid-weekly__wrapper {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    width: 100%;
-    height: 87%;
-    border: 1px solid red;
-}
-
 .mid-weekly__containers {
     display: flex;
     height: 100%;
-    overflow-y: scroll;  
+    overflow-y: scroll; 
+    align-items: flex-start;
 }
-
-
-
-.mid-title {
-    border: 1px solid red;
-    display: flex;
-    width: 100%;
-    height: 8%;
-    align-self: flex-start;
-    /* justify-content: space-between; */
-
-}
-
-.weekly__name {
-    border: 1px solid red;
-    width: 100%;
-    display: flex;
-    justify-content: column;  
-    flex-wrap: wrap;
-}
-.weekly__rest {
-    border: 1px solid red;
-    width: 18.33%;
-    align-items: center;
-}
-.overall__name {
-    width: 45%;
-    display: flex;
-    flex-wrap: wrap;
-}
-.overall__rest {
-    width: 18.33%;
-    align-items: center;
-}
-.mid-weekly h5 {
-    margin-top: -10px;
-    background-color: #f2f1f2;
-    margin-left: 8px;
-    margin-bottom: 0px;
-}
-
 
 .mid-overall {
     display: flex;
@@ -155,23 +136,4 @@
     margin-top: -10px;
     background-color: #f2f1f2;
     margin-left: 8px;
-}
-
-.bottom-row {
-    display: flex;
-}
-
-.bottom-github {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    width: 50%;
-    padding-left: 5%;
-}
-
-.bottom-huntr {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    width: 50%;
 }
