--- a/leaderboard-frontend/src/components/Navbar/Nav.css
+++ b/leaderboard-frontend/src/components/Navbar/Nav.css
@@ -6,6 +6,7 @@
 .Nav__container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   width: 1100px;
   margin: 0 auto;
 }
