--- a/leaderboard-frontend/src/components/CreateOrEditClass/CreateEditClass.css
+++ b/leaderboard-frontend/src/components/CreateOrEditClass/CreateEditClass.css
@@ -68,7 +68,7 @@ html, body, #root {
 .ClassList {
     background: beige;
     /*margin-top: 5%;*/
-    /*height: 50%;*/
+    /*height: 20%;*/
     /*margin-bottom: 3%;*/
 }
 
@@ -81,7 +81,7 @@ html, body, #root {
 
     text-align: center;
     /*padding-left: 0.5%;*/
-    height: 40%;
+    height: 35%;
     background: beige;
     margin-bottom: 1%;
     border: 1px solid red;
@@ -97,13 +97,15 @@ html, body, #root {
     vertical-align: center;
     /*padding-top: 2%;*/
     padding-left: 1%;
+    margin-right: 20%;
     width: 51%;
     height: 40%;
     border: 2px solid yellow;
 }
 .BtnImport {
     width: 20%;
-    margin-left: 27%;
+    /*margin-left: 100%;*/
+    /*padding: 40%;*/
     height: 40%;
     /*padding-top: 1%;*/
     /*padding-bottom: 1%;*/
@@ -114,7 +116,7 @@ html, body, #root {
 
 }
 .Add_Students {
-    height: 50%;
+    height: 40%;
     margin: 0 auto;
     background: beige;
     /*display: inline-block;*/
