Made a restructure of the the Classlist. The ClassList renders data from the server, and it can add classes. Clicking the edit tab goes to that classe's edit page. Currently, there are issues with the asynchronous data, as it's not getting the most recent changes, unless there's a hot reload.

--- a/leaderboard-frontend/src/components/Classlist/ClassList.css
+++ b/leaderboard-frontend/src/components/Classlist/ClassList.css
@@ -48,6 +48,13 @@
     height: 200px;
     box-shadow: 5px 5px 5px #888888;
 }
+.Add_Submit {
+    display: flex;
+    width: 100%;
+}
+.Add_Input {
+    width: 100%;
+}
 
 .APP__ADDCLASS__BUTTONWRAPPER {
     display: flex;
