--- a/leaderboard-frontend/src/App.css
+++ b/leaderboard-frontend/src/App.css
@@ -10,13 +10,6 @@
   padding: 1em 0;
 }
 
-.APP__CONTENT {
-  height: 100%;
-  padding-bottom: 100px;
-  display: flex;
-  justify-content: space-between;
-}
-
 .APP__MENU {
   width: 100px;
   background-color: lightgray;
@@ -24,7 +17,10 @@
 }
 
 .APP__BODY {
-  width: 85%;
   height: 100%;
+}
+
+.APP__CONTENT {
+  width: 1100px;
   margin: 0 auto;
 }
