--- a/leaderboard-frontend/src/components/Classlist/ClassList.css
+++ b/leaderboard-frontend/src/components/Classlist/ClassList.css
@@ -6,24 +6,29 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    background: beige;
 }
 
 .APP__CLASSCARD {
     border: 2px solid black;
+    background: black;
+    color: beige;
     padding: 2.5%;
     margin: 5px;
-    width: 200px;
-    height: 200px;
+    /*height: 50%;*/
+    /*width: 50%;*/
+    /*width: 200px;*/
+    /*height: 200px;*/
     box-shadow: 5px 5px 5px #888888;
 }
 
 .APP__CLASSCARD button {
-    margin-left: 5px;
+    margin-left: 2%;
     box-shadow: 2px 2px 2px #888888;
 }
 
 .APP__CNAME {
-    margin: 0;
+    /*margin: 0;*/
 }
 
 .APP__ADDCLASS__SOLO {
@@ -35,17 +40,38 @@
     text-align: center;
 }
 
+.BtnLeaderboard {
+    background: yellow;
+    width: 60%;
+    /*margin-left: 20%;*/
+}
+.BtnEdit {
+    background: rebeccapurple;
+    text-align: center;
+    width: 35%;
+    /*padding: 100%;*/
+    /*padding-right: 0%;*/
+    /*padding-right: 0%;*/
+    /*height: 20%;*/
+    /*padding-left: 100%;*/
+    /*margin-right: 100%;*/
+}
+
 .APP__ADDCLASS__CARD {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-size: 18px;
+    /*font-size: 18px;*/
     border: 2px solid black;
     padding: 2.5%;
-    margin: 5px;
-    width: 200px;
-    height: 200px;
+    /*margin: 5px;*/
+    /*width: 200px;*/
+    /*height: 200px;*/
+    font-size: 100%;
+    margin: 1%;
+    width: 23%;
+    height: 100%;
     box-shadow: 5px 5px 5px #888888;
 }
 .Add_Submit {
@@ -63,9 +89,11 @@
 }
 .APP__ADDCLASS_ADDBUTTON {
     align-self: center;
-    font-size: 40px;
-    height: 50px;
-    width: 50px;
+    font-size: 300%;
+    /*height: 50px;*/
+    /*width: 50px;*/
+    height: 40%;
+    width: 40%;
     border: solid black 2px;
     border-radius: 50%;
     box-shadow: 2px 2px 2px #888888;
