--- a/leaderboard-frontend/src/components/Classlist/ClassList.css
+++ b/leaderboard-frontend/src/components/Classlist/ClassList.css
@@ -63,14 +63,15 @@
     justify-content: center;
     align-items: center;
     /*font-size: 18px;*/
+    /*font-size: 110%;*/
+    font-weight: bold;
     border: 2px solid black;
     padding: 2.5%;
     /*margin: 5px;*/
     /*width: 200px;*/
     /*height: 200px;*/
-    font-size: 100%;
     margin: 1%;
-    width: 23%;
+    /*width: 23%;*/
     height: 100%;
     box-shadow: 5px 5px 5px #888888;
 }
@@ -80,6 +81,7 @@
 }
 .Add_Input {
     width: 100%;
+    margin-bottom: 12%;
 }
 
 .APP__ADDCLASS__BUTTONWRAPPER {
@@ -88,13 +90,27 @@
     text-decoration: none;
 }
 .APP__ADDCLASS_ADDBUTTON {
-    align-self: center;
-    font-size: 300%;
+    height: 10em;
+    width: 10em;
+    /*padding: 20%;*/
+    /*width: 500%;*/
+    /*width: 56px;*/
+    /*height: 56px;*/
+    /*position: relative;*/
+    /*border-radius: 50%;*/
+    /*border: 2px solid #fff;*/
+    /*!*margin: 30vh auto;*!*/
+    /*cursor: pointer;*/
+    /*z-index: 2;*/
+    /*align-self: center;*/
+    /*font-size: 28em;*/
+    /*!*font-size: 300%;*!*/
     /*height: 50px;*/
     /*width: 50px;*/
-    height: 40%;
-    width: 40%;
-    border: solid black 2px;
-    border-radius: 50%;
-    box-shadow: 2px 2px 2px #888888;
+    /*font-weight: bold;*/
+    /*!*height: 50%;*!*/
+    /*!*width: 50%;*!*/
+    /*border: solid black 2px;*/
+    /*border-radius: 50%;*/
+    /*box-shadow: 2px 2px 2px #888888;*/
 }
