Working on the Settings component. Will have to wire it up to the server, with the correct logic. Normally, the admin only needs to send the token once authenticated, but this time it's different; will have to wire it up properly tomorrow.

--- a/leaderboard-frontend/src/components/CreateOrEditClass/CreateEditClass.css
+++ b/leaderboard-frontend/src/components/CreateOrEditClass/CreateEditClass.css
@@ -84,7 +84,7 @@ html, body, #root {
     height: 35%;
     background: beige;
     margin-bottom: 1%;
-    border: 1px solid red;
+    /*border: 1px solid red;*/
 }
 .CName {
     /*padding-top: 1%;*/
