--- a/leaderboard-frontend/src/components/CreateOrEditClass/StudentList.css
+++ b/leaderboard-frontend/src/components/CreateOrEditClass/StudentList.css
@@ -1,5 +1,5 @@
 .main {
-    border: 2px solid orangered;
+    /*border: 2px solid orangered;*/
 
     /*display: flex;*/
     /*flex-direction: row;*/
@@ -14,6 +14,7 @@
 .Toggle {
     display: inline-flex;
     /*background: rebeccapurple;*/
-    width: 20%;
+    width: 12%;
+    margin-right: 0%;
     margin-bottom: 1em;
 }
