--- a/leaderboard-frontend/src/components/Settings/Setings.css
+++ b/leaderboard-frontend/src/components/Settings/Setings.css
@@ -23,8 +23,8 @@ html, body, #root {
     margin-right: 2.5%;
     margin-left: 2.5%;
     height: 100%;
-    font-size: 2em;
-    font-weight: bold;
+    /*font-size: 2em;*/
+    /*font-weight: bold;*/
     /*padding: 1em;*/
 }
 
