--- a/leaderboard-frontend/src/components/Navbar/Nav.css
+++ b/leaderboard-frontend/src/components/Navbar/Nav.css
@@ -23,3 +23,15 @@
   text-align: center;
   font-size: 0.8em;
 }
+
+.expiredToken {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-color: #10ba4b;
+  text-align: center;
+  padding: 25px 50px;
+  margin: 25px;
+  border-radius: 5px;
+  font-size: 1.3em;
+}
