--- a/leaderboard-frontend/src/components/LandingPage/LandingPage.css
+++ b/leaderboard-frontend/src/components/LandingPage/LandingPage.css
@@ -4,3 +4,10 @@
   border-top: 3px solid rgba(1, 1, 1);
   font-size: 1.5em;
 }
+
+.Landing__footer {
+  background-color: rgba(1, 1, 1, 0.7);
+  padding: 50px 0;
+  border-top: 3px solid rgba(1, 1, 1);
+  font-size: 1.5em;
+}
