Updated paths, clickable lambda link

--- a/leaderboard-frontend/src/components/LandingPage/LandingPage.css
+++ b/leaderboard-frontend/src/components/LandingPage/LandingPage.css
@@ -1,7 +1,7 @@
 .Landing__head {
   /* background-color: rgba(1, 1, 1, 0.7); */
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("./LandingPageComponents/img/RunningMan.jpeg");
+    url("./img/RunningMan.jpeg");
   background-size: cover;
   padding: 50px 0;
   border-top: 3px solid rgba(1, 1, 1);
