--- a/leaderboard-frontend/src/components/SettingsComponent/Settings.css
+++ b/leaderboard-frontend/src/components/SettingsComponent/Settings.css
@@ -1,3 +1,83 @@
-.Settings__Container {
-  margin-top: 10px;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+
+  display: 'inline-flex';
+  max-width: 1024
+
+}
+html, body, #root {
+  width: 100%;
+  height: 100%;
+}
+
+.SplitPane2 {
+  width: 100%;
+  height: 100%;
+}
+
+.SplitPane-left2 {
+  float: left;
+  width: 15%;
+  margin-right: 2.5%;
+  margin-left: 2.5%;
+  height: 100%;
+  font-size: 2em;
+  font-weight: bold;
+  /*padding: 1em;*/
+}
+
+.SplitPane-right2 {
+  float: left;
+  width: 75%;
+  height: 100%;
+}
+
+.LeftContent2 {
+  width: 100%;
+  height: 100%;
+  /*padding-top: 2em;*/
+  background: lightgray;
+}
+
+.RightContent2 {
+  width: 100%;
+  height: 100%;
+  background: #f2f1f2
+}
+
+.main2 {
+  height: 100%;
+}
+.Crumb {
+  margin-left: 2.5%;
+  margin-top: 0.5%;
+  margin-bottom: 0.5%;
+  font-weight: bold;
+  /*margin-top: 20em;*/
+}
+.headerField {
+  display: inline-flex;
+  width: 20%;
+  /*margin-right: 10%;*/
+}
+.InputWrapper {
+  margin-left: 5%;
+  padding-top: 5%;
+  width: 75%;
+
+  /*border: 1px solid yellow;*/
+
+}
+.inputVal {
+  margin-left: 30%;
+  width: 30%;
+
+}
+.BtnSave {
+  margin-left: 30%;
+  width: 10%;
+  padding: 1%;
+
 }
