Changed the styling, so that it uses semantics ui inputs, and buttons. I've also removed unnecessary that wasn't required for the functionality of the Settings component.

--- a/leaderboard-frontend/src/components/SettingsComponent/Settings.css
+++ b/leaderboard-frontend/src/components/SettingsComponent/Settings.css
@@ -41,9 +41,12 @@ html, body, #root {
   width: 30%;
 
 }
-.BtnSave {
-  margin-left: 30%;
-  width: 10%;
+.BtnDiv {
+  margin-left: 25%;
   padding: 1%;
+
+}
+.BtnSave {
+  width: 20%;
 
 }
